# CatMapPy

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pages.yml
docs/: api-reference.md  citation.md  contributing.md  index.md  installation.md  license.md  quickstart.md  reference.md  usage.md
src/catmappy/: __init__.py  core.py
src/catmappy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_catmappy.py
