[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catmappy"
version = "0.1.0"
description = "Python interface to the CatMapper API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
authors = [{ name = "ProjectCatMapper" }]
dependencies = ["requests>=2.31.0", "pandas>=2.0.0", "openpyxl>=3.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
